sistemo un margine per perfezionare il layout

--- a/css/style.css
+++ b/css/style.css
@@ -103,9 +103,9 @@ span {
 
 .bottom {
     display: flex;
-    justify-content: space-between;
     height: 3rem;
     align-items: center;
+    margin-left: -3rem;
 }
 
 .bottom ul li {
